[package]
name = "proiect_struct-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
rand = { version = "0.7.3", default-features = false, features = ["std"]}
thiserror = "1.0"